# Inside-ME

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.yml  pyproject.toml
.planning/: PROJECT.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  MemoryAdmin.tsx  MemoryVault.tsx  api.ts  customInterviewScripts.ts  index.css  interviewPresets.ts
scripts/: bootstrap-venv.sh  dev.sh
src/inside_me/: app.py  chat_archives.py  cli.py  config.py  embedding_http.py  logging_config.py  metrics.py  openai_compat.py  prefs.py  sender_aliases.py  store.py
src/inside_me/analysis/: __init__.py  filters.py  llm.py  profile.py  social.py  timeline.py  topics.py
src/inside_me/api/: import_jobs.py  routes.py  schemas.py
src/inside_me/parsers/: __init__.py  base.py  discord_csv.py  generic.py  qq_txt.py  registry.py  telegram_export.py  wechat_style.py  weibo_style.py
src/inside_me/skill/: __init__.py  generator.py
tests/: test_api_smoke.py  test_discord_csv.py  test_embedding_extract.py  test_filters.py  test_memory_store.py  test_openai_compat.py  test_qq_txt.py  test_sender_aliases.py  test_social_stats.py  test_weibo_registry.py
